<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <item android:id="@+id/home"-->
<!--        android:title="Home"/>-->

<!--    <item android:id="@+id/profile"-->
<!--        android:title="My Profile"/>-->
<!--    <item android:id="@+id/myevents"-->
<!--        android:title="My Events"/>-->

<!--    <item android:id="@+id/upcommingevents"-->
<!--        android:title="Upcoming Events"/>-->
<!--    <item android:id="@+id/logout"-->
<!--        android:title="Logout"/>-->

    <item android:id="@+id/home"
        android:title="@string/home"/>
    <item android:id="@+id/profile"
        android:title="@string/myprofile"/>
    <item android:id="@+id/myevents"
        android:title="@string/myevents"/>
    <item android:id="@+id/upcommingevents"
        android:title="@string/upevents"/>
    <item android:id="@+id/logout"
        android:title="@string/logout"/>



</menu>