<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminLoginActivity"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:gravity="center"
    android:layout_gravity="center">

    <ImageView
        android:layout_width="300px"
        android:layout_height="300px"
        android:src="@drawable/seminar"

        android:layout_marginTop="0px"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"

        android:gravity="center"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="#FFC947"/>



    <LinearLayout
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:background="#FFF"
        android:layout_gravity="right"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tvEng"
            android:text="English"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tvFr"
            android:text="French"
            android:padding="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aLogin"
        android:textSize="30dp"

        android:gravity="center"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:textColor="#000"/>

    <EditText
        android:id="@+id/etadminemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_user_hint"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="20dp"
        android:inputType="text"
        android:layout_marginRight="10dp"
        android:focusedByDefault="true"
        />

<!--    <EditText-->
<!--        android:id="@+id/etadminpass"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:hint="Enter Password"-->
<!--        android:layout_marginTop="20dp"-->
<!--        android:inputType="textPassword"-->
<!--        />-->


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tv_pwd"
        style="@style/TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginRight="10dp"
        android:hint="@string/login_password_hint"
        android:textColorHint="#000000"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etadminpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/btnadminlogin"
        android:layout_width="wrap_content"
        android:backgroundTint="#FFC947"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:text="@string/bLogin"
        android:textStyle="bold"
        android:textSize="15dp"
        android:textColor="#fff"

        android:layout_marginTop="20dp"/>



</LinearLayout>