<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawe_layout"
    android:fitsSystemWindows="true"
    android:background="@color/black"
    tools:openDrawer="start"
    >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:context=".StudentHomeActivity"
                    android:orientation="vertical"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:layout_gravity="center">



                    <ImageView
                        android:layout_width="300px"
                        android:layout_height="300px"
                        android:src="@drawable/seminar"

                        android:layout_marginTop="0px"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name"

                        android:gravity="center"
                        android:textSize="25dp"
                        android:textStyle="bold"
                        android:textColor="#FFC947"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:orientation="horizontal"
                        android:background="#FFF"
                        android:layout_gravity="right"
                        android:layout_height="wrap_content">
                        <TextView
                            android:id="@+id/tvEng"
                            android:text="English"
                            android:padding="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/tvFr"
                            android:text="French"
                            android:padding="8dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>


                    <Button
                        android:id="@+id/btnaddevent"
                        android:layout_width="250dp"
                        android:backgroundTint="#FFC947"
                        android:layout_height="60dp"
                        android:background="@drawable/button"
                        android:text="@string/addevent"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="#fff"

                        android:layout_marginTop="20dp"/>

                    <Button
                        android:id="@+id/btnviewevents"
                        android:layout_width="250dp"
                        android:backgroundTint="#FFC947"
                        android:layout_height="wrap_content"
                        android:background="@drawable/button"
                        android:text="@string/viewevent"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="#fff"

                        android:layout_marginTop="20dp"/>





                </LinearLayout>
    </RelativeLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_marginTop="100dp"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    app:menu="@menu/student_menu"
    android:layout_gravity="start"
    app:headerLayout="@layout/nav_header"
    android:id="@+id/nv">
    </com.google.android.material.navigation.NavigationView>
</androidx.drawerlayout.widget.DrawerLayout>